first example of chat: one input one output

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,38 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.app-container {
+  margin: 0 auto;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-input{
+  height: 30px;
+  width: 250px;
+  padding: 5px 15px;
+  border-radius: 10px;
+  border: 1px solid lightgray;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.app-button{
+  height: 35px;
+  width: 150px;
+  border: 1px solid lightgray;
+  border-radius: 10px;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.app-message-block{
+  margin: 10px auto;
+  width: 250px;
+  padding: 15px;
+  border-radius: 10px;
+  border: 1px solid black;
 }
