--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,38 +1,29 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 1rem;
-  text-align: center;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.app-container {
-  margin: 0 auto;
-  width: 400px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
+:root {
+    --primary-color: rgb(37, 197, 163);
+    --primary-color-darker: rgba(70, 200, 170, 1);
+    --primary-color-lighter: rgba(90, 228, 191, 0.1);
+    --secondary-color: rgba(247, 251, 251, 0.6);
+    --background-chat-window: rgba(90, 228, 191, 0.4);
+    --input-area-bg: #f0f0f0;
+    --text-color: #333;
+    --white-color: white;
+    --border-color: #ccc;
+    --focus-shadow-color: rgba(90, 228, 191, 0.3);
 }
 
-.app-input{
-  height: 30px;
-  width: 250px;
-  padding: 5px 15px;
-  border-radius: 10px;
-  border: 1px solid lightgray;
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: var(--text-color);
 }
 
-.app-button{
-  height: 35px;
-  width: 150px;
-  border: 1px solid lightgray;
-  border-radius: 10px;
-}
 
-.app-message-block{
-  margin: 10px auto;
-  width: 250px;
-  padding: 15px;
-  border-radius: 10px;
-  border: 1px solid black;
-}
