feat(client): Шаблон для форм авторизации

--- a/client/src/layouts/auth/AuthFormLayout.module.css
+++ b/client/src/layouts/auth/AuthFormLayout.module.css
@@ -99,13 +99,13 @@
     color: #555;
 }
 
-.switchAuthLink {
+.switchAuth a {
     color: var(--primary-color);
     text-decoration: none;
     font-weight: 500;
 }
 
-.switchAuthLink:hover {
+.switchAuth a:hover {
     text-decoration: underline;
 }
 
